# hello-igl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: libigl.cmake
src/: CMakeLists.txt  main.cpp
